Sun Feb 15 21:07:48 1998  Jeffrey A Law  (law@cygnus.com)

	* arm/netbsd.h (DWARF2_UNWIND_INFO): Define as zero for now.
	* i386/netbsd.h, m68k/netbsd.h, ns32k/netbsd.h: Likewise.
	* sparc/netbsd.h, vax/netbsd.h: Likewise.

Sun Feb 15 20:55:23 1998  Bernd Schmidt <crux@ohara.Informatik.RWTH-Aachen.DE>

	* i386.c (notice_update_cc): Use reg_overlap_mentioned_p.

Sat Feb 14 15:54:28 1998  H.J. Lu  (hjl@gnu.org)

	* config/alpha/elf.h (LIB_SPEC): New. Defined if
	USE_GNULIBC_1 is not defined.

	* config/linux.h (LIB_SPEC): Add -lc for -shared if
	USE_GNULIBC_1 is not defined.
	* config/sparc/linux.h: Ditto.

	* config/sparc/linux64.h (LIB_SPEC): Add -lc for -shared.

	* config/sparc/linux64.h (LIBGCC_SPEC): Removed.
	(CPP_SUBTARGET_SPEC): Add %{pthread:-D_REENTRANT}.
	(LIB_SPEC): Updated for glibc 2.

Sat Nov 29 12:45:51 1997  Mumit Khan  <khan@xraylith.wisc.edu>

	* config/i386/cygwin32.h (DWARF2_UNWIND): Exception handling 
	doesn't work with it yet, so set it to 0.
	* config/i386/x-cygwin32 (USE_COLLECT2): Delete.
	* config/i386/xm-cygwin32.h (NO_SYS_SIGLIST): Define.

Fri Feb 13 01:29:29 1998 Franz Sirl <franz.sirl-kernel@lauterbach.com>

	* rs6000/sysv4.h (ENDFILE_SPEC): add missing %(endfile_linux)
	for -mcall-linux

Fri Feb 13 00:47:21 1998  Jeffrey A Law  (law@cygnus.com)

	* cccp.c (new_include_prefix): Correctly handle -I./.

Sun Dec 28 00:32:16 1997  Jeffrey A Law  (law@cygnus.com)

	* flow.c (find_basic_blocks): Don't create a new basic block
	for calls in a LIBCALL block.

Fri Dec 12 01:19:48 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* flow.c (flow_analysis): Be consistent with find_basic_blocks in
	determining when a new basic block starts.

Thu Dec 11 22:02:10 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* flow.c (find_basic_blocks): A CALL_INSN that can throw starts
	a new basic block.
	(find_basic_blocks_1): Likewise.

Thu Dec  4 11:51:00 1997  Jason Merrill  <jason@yorick.cygnus.com>
